# c-tools

./: CMakeLists.txt  Doxyfile
.github/: README.md
html/: _d_1_2c-tools_2src_2touch_2main_8c-example.html  annotated.html  annotated_dup.js  classes.html  clear_2main_8c.html  clear_2main_8c.js  clear_2main_8c_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_a5c6d64fe4a776041701ce9f589b35a0.html  dir_a5c6d64fe4a776041701ce9f589b35a0.js  dir_c44c95bf3b41c3321c6014770d618ac8.html  dir_c44c95bf3b41c3321c6014770d618ac8.js  dir_ef312a24b5a0aa242ad3b7748370e3ac.html  dir_ef312a24b5a0aa242ad3b7748370e3ac.js  dir_f002000ec8486675485cd2edcda63887.html  dir_f002000ec8486675485cd2edcda63887.js  doxygen_crawl.html  examples.html  examples.js  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  grep_2main_8c.html  grep_2main_8c.js  grep_2main_8c_source.html  group___color_codes.html  group___color_codes.js  group___safe_string.html  group___safe_string.js  index.html  menudata.js  navtreedata.js  navtreeindex0.js  struct_node.html  struct_node.js  (+10 more)
latex/: _d_1_2c-tools_2src_2touch_2main_8c-example.tex  annotated.tex  clear_2main_8c.tex  clear_2main_8c_source.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_a5c6d64fe4a776041701ce9f589b35a0.tex  dir_c44c95bf3b41c3321c6014770d618ac8.tex  dir_ef312a24b5a0aa242ad3b7748370e3ac.tex  dir_f002000ec8486675485cd2edcda63887.tex  dirs.tex  examples.tex  files.tex  grep_2main_8c.tex  grep_2main_8c_source.tex  group___color_codes.tex  group___safe_string.tex  refman.tex  struct_node.tex  struct_options.tex  topics.tex  touch_2main_8c.tex  tree_2main_8c.tex  (+2 more)
(+32 files in other folders)
